# simplical-attn

./: .gitignore  README.md  main.py  pyproject.toml  run_simplicial_tests.py
simplical-attn/: __init__.py  kernels.py  reference.py  simplical_attn.py  test_performance.py  triton_impl.py
simplicial/: __init__.py
simplicial-attn/: test_correctness.py
